Correct project status on small resolutions (Max-Iphone 320px width)

--- a/assets/_scss/modules/_project-edit.scss
+++ b/assets/_scss/modules/_project-edit.scss
@@ -27,6 +27,13 @@
     width: 20%;
     background: $grey-light;
     text-align: center;
+
+    @media screen and (max-width: 320px) {
+      width: 80%;
+      margin: auto;
+      float: none;
+    }
+
     &.completed {
       background-color: #004dff;
       opacity: 0.8;
